# claude-code-clipboard-monitor

./: .gitignore  CLAUDE.md  README.md  clipboard_monitor.py  install.bat  install.sh  pyproject.toml  setup.py
claude_clipboard_monitor/: __init__.py  cli.py  drag_monitor.py  drag_simulator.py  installer.py  monitor.py  simple_monitor.py  smart_monitor.py
