[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-clipboard-monitor"
version = "0.1.0"
description = "Claude Code 剪切板监听器 - 自动保存剪切板图片并替换为文件引用"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Tools",
    "Topic :: Utilities",
]
keywords = ["claude", "clipboard", "monitor", "screenshot", "productivity"]
requires-python = ">=3.8"
dependencies = [
    "pillow>=8.0.0",
    "pyperclip>=1.8.0",
    "psutil>=5.8.0",
    "pyautogui>=0.9.52",
]

[project.urls]
Homepage = "https://github.com/yourusername/claude-clipboard-monitor"
Repository = "https://github.com/yourusername/claude-clipboard-monitor"
Issues = "https://github.com/yourusername/claude-clipboard-monitor/issues"

[project.scripts]
claude-clipboard-monitor = "claude_clipboard_monitor.cli:main"
claude-clipboard-drag = "claude_clipboard_monitor.drag_monitor:main"
claude-clipboard-config = "claude_clipboard_monitor.installer:main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black>=21.0.0",
    "flake8>=3.8.0",
    "mypy>=0.800",
]
windows = [
    "pywin32>=227; sys_platform == 'win32'",
]
macos = [
    "pyobjc-framework-Quartz>=7.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=7.0; sys_platform == 'darwin'",
]
all = [
    "pywin32>=227; sys_platform == 'win32'",
    "pyobjc-framework-Quartz>=7.0; sys_platform == 'darwin'",
    "pyobjc-framework-Cocoa>=7.0; sys_platform == 'darwin'",
]

[tool.setuptools]
packages = ["claude_clipboard_monitor"]

[tool.setuptools.package-data]
claude_clipboard_monitor = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true